2006-12-13  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/hl7x0.xml, opt/hl7x0-Duplex.xml,
	  opt/hl7x0-EconomyMode.xml, opt/hl7x0-InputSlot.xml,
	  opt/hl7x0-MediaType.xml, opt/hl7x0-PIN.xml,
	  opt/hl7x0-Resolution.xml: Added advanced options to the "hl7x0"
	  (Brother host-based printing) driver.

2006-12-13  Tim Waugh  <twaugh@redhat.com>

	* printer/Epson-EPL-6200L.xml: Fixed IEEE 1284 information (RH
	  bug #170373) by inserting 'usb' node.

	* printer/Okidata-Okipage_10e.xml: Added IEEE 1284 information (RH
	  bug #188762).

2006-12-12  Tim Waugh  <twaugh@redhat.com>

	* printer/Ricoh-Aficio_CL7200.xml: Added SNMP information (RH
	  bug #187387).

	* printer/Epson-Stylus_Photo_895.xml: Added IEEE 1284 info (RH
	  bug #191504).

	* printer/HP-OfficeJet_7300.xml: Added IEEE 1284 information (RH
	  bug #198999).

2006-12-11  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-DeskJet_6122.xml: Added IEEE 1284 information (RH
	  bug #191661).

2006-12-05  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-LaserJet_3200.xml: Added IEEE 1284 information (RH
	  bug #214037).

2006-11-29  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-LaserJet_1160.xml: Added IEEE 1284 information (RH
	  bug #215010).

	* printer/Samsung-ML-1610.xml: This model does not support
	  PostScript (RH bug #195801).

2006-11-23  Tim Waugh  <twaugh@redhat.com>

	* printer/Samsung-ML-1740.xml: Added IEEE 1284 information (RH
	  bug #208809).

2006-11-23  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/drv_z42.xml: Updated text and URL as this driver is not
	  maintained upstream any more. The driver is re-hosted on
	  linuxprinting.org now.

2006-11-22  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript.xml: Put '%!PS' instead of '%!PS-Adobe' as
	  first line of the PostScript output, as '%!PS-Adobe' can break
	  things and '%!PS' already helps to make printers with data
	  format auto-detection do the right thing. See