@@ -3,7 +3,7 @@
  <url>http://www.cs.wisc.edu/~ghost/doc/printer.htm</url>
  <execution>
   <ghostscript />
-  <prototype>RES=%E; gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -sDEVICE=hl7x0%A%Z -r$RES -sOutputFile=- - | perl -e &apos;my $u = &quot;%U&quot;; my $j = &quot;%T&quot;; my $p = &quot;%F&quot;; my $r = &quot;&apos;$RES&apos;&quot;; my $e = %G; my $m = %H; my $d = &quot;%I&quot;; my $t = &quot;%J&quot;; my $pcmd = &quot;&quot;; if ($p =~ /^\d\d\d\d$/) {$u =~ s/\%U//; $u ||= &quot;Unknown&quot;; $j =~ s/\%T//; $j ||= &quot;Unknown&quot;; $u = chr(length($u) + 1) . $u . &quot;\x00&quot;; $j = chr(length($j) + 1) . $j . &quot;\x00&quot;; $p = chr(length($p) + 1) . $p . &quot;\x00&quot;; $pcmd = &quot;\@U1$u$j$p&quot;}; my $rcode = &quot;\x00&quot;; if ($r =~ /^150(|x150)$/) {$rcode = &quot;\x0a&quot;} elsif ($r =~ /^300(|x300)$/) {$rcode = &quot;\x05&quot;} elsif ($r =~ /^600(|x600)$/) {$rcode = &quot;\x00&quot;} elsif ($r =~ /^1200(|x1200)$/) {$rcode = &quot;\x0f&quot;}; my $rcmd = &quot;\@L$rcode&quot;; my $ecmd = &quot;\@E&quot; . chr($e); my $mcmd = &quot;\@J&quot; . chr($m); my $dcmd = &quot;\@O$d&quot;; my $tcmd = &quot;\@S$t&quot;; my $did = 0; while (&lt;&gt;) {if (!$did) {s/\@L./$pcmd$rcmd$ecmd$mcmd$dcmd$tcmd/ &amp;&amp; $did ++}; print}&apos;</prototype>
+  <prototype>RES=%E; gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -sDEVICE=hl7x0%A%Z -r$RES -sOutputFile=- - | perl -e &apos;my $u = &quot;%U&quot;; my $j = &quot;%T&quot;; my $p = &quot;%F&quot;; my $r = &quot;&apos;$RES&apos;&quot;; my $e = &quot;%G&quot;; my $m = &quot;%H&quot;; my $d = &quot;%I&quot;; my $t = &quot;%J&quot;; my $pcmd = &quot;&quot;; if ($p =~ /^\d\d\d\d$/) {$u =~ s/\%U//; $u ||= &quot;Unknown&quot;; $j =~ s/\%T//; $j ||= &quot;Unknown&quot;; $u = chr(length($u) + 1) . $u . &quot;\x00&quot;; $j = chr(length($j) + 1) . $j . &quot;\x00&quot;; $p = chr(length($p) + 1) . $p . &quot;\x00&quot;; $pcmd = &quot;\@U1$u$j$p&quot;}; my $rcode = &quot;\x00&quot;; if ($r =~ /^150(|x150)$/) {$rcode = &quot;\x0a&quot;} elsif ($r =~ /^300(|x300)$/) {$rcode = &quot;\x05&quot;} elsif ($r =~ /^600(|x600)$/) {$rcode = &quot;\x00&quot;} elsif ($r =~ /^1200(|x1200)$/) {$rcode = &quot;\x0f&quot;}; my $rcmd = &quot;\@L$rcode&quot;; my $ecmd = ($e =~ /^[0123]$/ ? &quot;\@E&quot; . chr($e) : &quot;&quot;); my $mcmd = ($m =~ /^[012345678]$/ ? &quot;\@J\x00&quot; . chr($m) : &quot;&quot;); my $dcmd = ($d =~ /^[12]$/ ? &quot;\@O$d&quot; : &quot;&quot;); my $tcmd = ($t =~ /^[12MOo]$/ ? &quot;\@S$t&quot; : &quot;&quot;); my $did = 0; while (&lt;&gt;) {if (!$did) {s/\@L./$pcmd$rcmd$ecmd$mcmd$dcmd$tcmd/s &amp;&amp; $did ++}; print}&apos;</prototype>
  </execution>
  <comments>
   <en>
