@@ -18,10 +18,23 @@
   <constraints>
    <constraint sense="true">
     <driver>hl7x0</driver>
-    <arg_defval>ev/hl7x0-EconomyMode-Off</arg_defval>
+    <arg_defval>ev/hl7x0-EconomyMode-Default</arg_defval>
    </constraint>
   </constraints>
   <enum_vals>
+   <enum_val id="ev/hl7x0-EconomyMode-Default">
+    <ev_longname>
+     <en>Printer Default</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Default</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval></ev_driverval>
+   </enum_val>
    <enum_val id="ev/hl7x0-EconomyMode-Off">
     <ev_longname>
      <en>Off</en>
