@@ -22,7 +22,20 @@
    </constraint>
   </constraints>
   <enum_vals>
-   <enum_val id="ev/hl7x0-InputSlot-Auto">
+   <enum_val id="ev/hl7x0-InputSlot-Default">
+    <ev_longname>
+     <en>Printer Default</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Default</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval></ev_driverval>
+   </enum_val>
+   <enum_val id="ev/hl7x0-InputSlot-Default">
     <ev_longname>
      <en>Automatic Selection</en>
     </ev_longname>
