@@ -1,4 +1,11 @@
-2006-12-13  Till Kamppeter <till.kamppeter@gmail.com>
+2006-12-18  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/hl7x0.xml, opt/hl7x0-EconomyMode.xml,
+	  opt/hl7x0-InputSlot.xml, opt/hl7x0-MediaType.xml: Fixes of the
+	  new options for the "hl7x0" driver after testing on a real
+	  Brother printer.
+
+2006-12-14  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/hl7x0.xml, opt/hl7x0-Duplex.xml,
 	  opt/hl7x0-EconomyMode.xml, opt/hl7x0-InputSlot.xml,
